add project model

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@
 
 # dependencies
 /node_modules
+/bower_components
+
 
 # IDEs and editors
 /.idea
@@ -41,3 +43,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+#Firebase credentials
+/src/app/api-keys.ts
